--- a/i3/config
+++ b/i3/config
@@ -21,9 +21,6 @@ gaps inner 5
 # Remove title bar
 default_border pixel 2
 
-# Init picom
-exec_always --no-startup-id picom
-
 # Set monitors position
 exec_always xrandr --output HDMI-0 --right-of DP-0
 
@@ -32,10 +29,17 @@ exec_always xrandr --output DP-0 --mode 1920x1080 --rate 144
 exec_always xrandr --output HDMI-0 --mode 1920x1080 --rate 75
 
 # Set background image
-exec_always feh --bg-scale ~/wallpapers/paint.jpg
+exec_always feh --bg-scale ~/Github/dotfiles/wallpapers/artdebian.png
+# exec_always feh --bg-scale ~/Downloads/debian.png
+
+# Picom conf
+# exec_always --no-startup-id picom --config ~/.config/picom.conf
+
+# Steam related
+exec --no-startup-id /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1
 
 # Set colors
-client.focused #35c4ca #35c4ca #ffffff #35c4ca #35c4ca
+# client.focused #35c4ca #35c4ca #ffffff #35c4ca #35c4ca
 
 # Set keyboard layout shortcuts
 # exec --no-startup-id setxkbmap -layout us -model pc86 -option grp:win_space_toggle
@@ -53,7 +57,7 @@ exec --no-startup-id dex --autostart --environment i3
 
 # xss-lock grabs a logind suspend inhibit lock and will use i3lock to lock the
 # screen before suspend. Use loginctl lock-session to lock your screen.
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock -i ~/Github/dotfiles/wallpapers/artdebianscaled.png -t --nofork
 
 # NetworkManager is the most popular way to manage wireless networks on Linux,
 # and nm-applet is a desktop environment-independent system tray GUI for it.
@@ -63,8 +67,8 @@ exec_always --no-startup-id setxkbmap -option grp:win_space_toggle us,br
 
 # Use pactl to adjust volume in PulseAudio.
 set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +1% && $refresh_i3status
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -1% && $refresh_i3status
 bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
 bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
@@ -76,7 +80,8 @@ floating_modifier $mod
 tiling_drag modifier titlebar
 
 # start a terminal
-bindsym $mod+Return exec alacritty --working-directory "$(readlink -e /proc/"$(pgrep -oP "$(xdo pid)")"/cwd)"
+# bindsym $mod+Return exec alacritty --working-directory "$(readlink -e /proc/"$(pgrep -oP "$(xdo pid)")"/cwd)"
+bindsym $mod+Return exec alacritty
 
 # kill focused window
 bindsym $mod+Shift+q kill
@@ -88,6 +93,8 @@ bindsym $mod+d exec --no-startup-id dmenu_run
 # There also is i3-dmenu-desktop which only displays applications shipping a
 # .desktop file. It is a wrapper around dmenu, so you need that installed.
 # bindcode $mod+40 exec --no-startup-id i3-dmenu-desktop
+
+bindsym $mod+m exec emacs
 
 bindsym Print exec flameshot gui
 
@@ -104,10 +111,10 @@ bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+semicolon move right
+bindsym $mod+Shift+h move left
+bindsym $mod+Shift+j move down
+bindsym $mod+Shift+k move up
+bindsym $mod+Shift+l move right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -178,6 +185,8 @@ bindsym $mod+Shift+8 move container to workspace number $ws8
 bindsym $mod+Shift+9 move container to workspace number $ws9
 bindsym $mod+Shift+0 move container to workspace number $ws10
 
+bindsym $mod+b exec brave-browser
+
 # reload the configuration file
 bindsym $mod+Shift+c reload
 # restart i3 inplace (preserves your layout/session, can be used to upgrade i3)
@@ -227,19 +236,24 @@ bindsym $mod+o mode "$mode_system"
 
 bindsym $mod+r mode "resize"
 
+for_window [title=".*opengl.*"] floating enable
+
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
+# bar {
+#     font pango:DejaVu Sans Mono, FontAwesome 10
+#     position top
+#     status_command i3status-rs ~/.config/i3status-rs/config.toml
+#     # colors {
+#     #     separator #666666
+#     #     background #222222
+#     #     statusline #dddddd
+#     #     focused_workspace #0088CC #0088CC #ffffff
+#     #     active_workspace #333333 #333333 #ffffff
+#     #     inactive_workspace #333333 #333333 #888888
+#     #     urgent_workspace #2f343a #900000 #ffffff
+#     # }
+# }
 bar {
-    font pango:DejaVu Sans Mono, FontAwesome 10
-    position top
-    status_command i3status-rs ~/.config/i3status-rs/config.toml
-    colors {
-        separator #666666
-        background #222222
-        statusline #dddddd
-        focused_workspace #0088CC #0088CC #ffffff
-        active_workspace #333333 #333333 #ffffff
-        inactive_workspace #333333 #333333 #888888
-        urgent_workspace #2f343a #900000 #ffffff
-    }
+    status_command i3status
 }
