--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,10 +1,15 @@
+import = [
+    # "~/.config/alacritty/themes/themes/gruvbox_dark.toml"
+    "~/.config/alacritty/themes/themes/hyper.toml"
+]
+
 [font]
+# normal = { family = "BlexMono Nerd Font" }
+# normal = { family = "DejaVuSansM Nerd Font Mono" }
+# normal = { family = "Iosevka Nerd Font Mono" }
 normal = { family = "FantasqueSansM Nerd Font Mono", style = "Regular" }
 
 size = 16
 
 [colors.primary]
-background = "#151414"
-
-[window]
-opacity = 0.8
+background = "#121212"
