--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -1,6 +1,7 @@
 import = [
+    "~/.config/alacritty/themes/themes/gruber_darker.toml"
     # "~/.config/alacritty/themes/themes/gruvbox_dark.toml"
-    "~/.config/alacritty/themes/themes/hyper.toml"
+    # "~/.config/alacritty/themes/themes/hyper.toml"
 ]
 
 [font]
