--- a/i3/config
+++ b/i3/config
@@ -237,6 +237,7 @@ bindsym $mod+o mode "$mode_system"
 bindsym $mod+r mode "resize"
 
 for_window [title=".*opengl.*"] floating enable
+for_window [all] title_window_icon yes
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
